[package]
name = "sokol-imgui"
version = "0.2.0"
authors = ["Daniel Ludwig <codi@code-disaster.com>"]
description = "A backend for use with sokol-rs and imgui-rs."
repository = "https://github.com/code-disaster/sokol-rs"
readme = "README.md"
license = "Zlib"

[dependencies]
sokol = { path = "../sokol" }
imgui-sys = { git = "https://github.com/code-disaster/imgui-rs", branch = "patch.x86_64-pc-windows-gnu" }
