[package]
name = "sokol-imgui"
version = "0.4.0"
authors = ["Daniel Ludwig <codi@code-disaster.com>"]
description = "Dear ImGui renderer/event-handler using the sokol_imgui.h header-only library."
repository = "https://github.com/code-disaster/sokol-rs"
readme = "README.md"
license = "Zlib"

[dependencies]
sokol = { version = "0.4.0", path = "../sokol" }
sokol-sys = { version = "0.4.0", path = "../sokol-sys" }
