[package]
name = "sokol-stb"
version = "0.3.0"
authors = ["Daniel Ludwig <codi@code-disaster.com>"]
description = "A collection of tools for using the stb libraries with sokol-rs."
repository = "https://github.com/code-disaster/sokol-rs"
readme = "README.md"
license = "Zlib"

build = "build.rs"

[dependencies]
memmap = "0.7"
sokol = { path = "../sokol" }

[build-dependencies]
cc = "1.0"
