[package]
name = "sokol-sys"
version = "0.4.0"
authors = ["Daniel Ludwig <codi@code-disaster.com>"]
description = "Low-level compilation units for the sokol header-only, cross-platform C libraries."
repository = "https://github.com/code-disaster/sokol-rs"
readme = "README.md"
license = "Zlib"

build = "build.rs"

[build-dependencies]
cc = "1.0"
