[package]
name = "sokol-sys"
version = "0.4.0"
authors = ["Daniel Ludwig <codi@code-disaster.com>"]
description = "Compilation units for C/C++ libraries used by the sokol Rust bindings."
repository = "https://github.com/code-disaster/sokol-rs"
readme = "README.md"
license = "Zlib"

edition = "2018"

build = "build.rs"

[build-dependencies]
cc = "1.0"
