[package]
name = "sokol"
version = "0.4.0"
authors = ["Daniel Ludwig <codi@code-disaster.com>"]
description = "Rust bindings to the sokol header-only, cross-platform C libraries."
repository = "https://github.com/code-disaster/sokol-rs"
readme = "README.md"
license = "Zlib"

edition = "2018"

[dependencies]
sokol-sys = { version = "0.4.0", path = "../sokol-sys" }
bitflags = "1.0"
